--- a/src/views/register/register.css
+++ b/src/views/register/register.css
@@ -1,23 +1,27 @@
 .register-user-form-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 85vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 85vh;
 }
 
 .register-user-form-box {
-  width: 30rem;
+	width: 30rem;
 }
 
 .register-user-form-box .title {
-  text-align: center;
+	text-align: center;
 }
 
 .register-user-form-box .button {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .register-user-form-box .input:focus {
-  border-color: #00d1b2;
-  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+	border-color: #00d1b2;
+	box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
+}
+
+.hide {
+	display: none;
 }
