--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -51,9 +51,8 @@
 
           <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
             <ul id="navbar">
-              <li><a href="../userinfo/userinfo.html">회원정보수정test</a></li>
               <li>
-                <a href="#cart" aria-current="page">
+                <a href="/cart" aria-current="page">
                   <span class="icon">
                     <i class="fas fa-cart-shopping"></i>
                   </span>
