--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -39,7 +39,7 @@
                     <p class="subtitle">지난 주문 내역을 확인, 취소할 수 있습니다.</p>
                 </div>
             </a>
-            <a class="menu-card" href="../userinfo/userinfo.html">
+            <a class="menu-card" href="../mypage/userinfo">
                 <div class="menu-body">
                     <p class="title">회원정보 관리</p>
                     <p class="subtitle">회원 정보를 확인, 수정할 수 있습니다.</p>
