--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>쇼핑-n팀</title>
     <!-- 아이콘 -->
     <link
@@ -26,38 +26,42 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="mypage.css" />
     <script src="mypage.js" type="module" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <section class="section">
-        <div class="block account-header">
-            <h1 class="title">계정관리</h1>
-        </div>
-        <div class="menu-container">
-            <a class="menu-card" href="/account/orders">
-                <div class="menu-body">
-                    <p class="title">주문조회</p>
-                    <p class="subtitle">지난 주문 내역을 확인, 취소할 수 있습니다.</p>
-                </div>
-            </a>
-            <a class="menu-card" href="../mypage/userinfo">
-                <div class="menu-body">
-                    <p class="title">회원정보 관리</p>
-                    <p class="subtitle">회원 정보를 확인, 수정할 수 있습니다.</p>
-                </div>
-            </a>
-            <a class="menu-card" href="/product/add">
-                <div class="menu-body">
-                    <p class="title">제품판매</p>
-                    <p class="subtitle">제품 정보를 등록하여, 판매를 시작할 수 있습니다.</p>
-                </div>
-            </a>
-            <a class="menu-card" href="/account/signout">
-                <div class="menu-body">
-                    <p class="title">회원탈퇴</p>
-                    <p class="subtitle">모든 정보를 안전하게 삭제한 후 탈퇴할 수 있습니다.</p>
-                </div>
-            </a>
-        </div>
+      <div class="block account-header">
+        <h1 class="title">계정관리</h1>
+      </div>
+      <div class="menu-container">
+        <a class="menu-card" href="/account/orders">
+          <div class="menu-body">
+            <p class="title">주문조회</p>
+            <p class="subtitle">지난 주문 내역을 확인, 취소할 수 있습니다.</p>
+          </div>
+        </a>
+        <a class="menu-card" href="../mypage/userinfo">
+          <div class="menu-body">
+            <p class="title">회원정보 관리</p>
+            <p class="subtitle">회원 정보를 확인, 수정할 수 있습니다.</p>
+          </div>
+        </a>
+        <a class="menu-card" href="/product/add">
+          <div class="menu-body">
+            <p class="title">제품판매</p>
+            <p class="subtitle">
+              제품 정보를 등록하여, 판매를 시작할 수 있습니다.
+            </p>
+          </div>
+        </a>
+        <a class="menu-card" href="/mypage/signout">
+          <div class="menu-body">
+            <p class="title">회원탈퇴</p>
+            <p class="subtitle">
+              모든 정보를 안전하게 삭제한 후 탈퇴할 수 있습니다.
+            </p>
+          </div>
+        </a>
+      </div>
     </section>
-</body>
+  </body>
 </html>
