--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -25,83 +25,71 @@
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="home.css" />
     <script src="home.js" type="module" defer></script>
-
-    <!--Swiper-->
-  <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
-  <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
   </head>
   <body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-n팀</span>
-          </a>
+    <header class="header">
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="container mt-3">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+              <img src="/elice-rabbit.png" width="30" height="30" />
+              <span class="has-text-link">쇼핑-n팀</span>
+            </a>
 
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
+            <a
+              role="button"
+              class="navbar-burger"
+              aria-label="menu"
+              aria-expanded="false"
+              data-target="navbarBasicExample"
+            >
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
 
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li><a href="/login">로그인</a></li>
-              <li><a href="/register">회원가입</a></li>
-              <li>
-                <a href="#cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
-            </ul>
+            <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
+              <ul id="navbar">
+                <li>
+                  <a href="/cart" aria-current="page">
+                    <span class="icon">
+                      <i class="fas fa-cart-shopping"></i>
+                    </span>
+                    <span>카트</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
-
-
-
-  <!-- 슬라이드 이미지 -->
-  <section class="promotion">
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-            <img src="https://images.unsplash.com/photo-1653372500688-e274f8b5d65a?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548" alt="예시이미지1">
-        </div>
-        <div class="swiper-slide">
-            <img src="https://images.unsplash.com/photo-1653372512929-5ac36eb22a73?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1548" alt="예시이미지2">
-        </div>
-        <div class="swiper-slide">
-            <img src="https://images.unsplash.com/photo-1497215728101-856f4ea42174?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470" alt="예시이미지3">
-        </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-prev">
-            <div class="material-icons">arrow_back</div>
-        </div>
-        <div class="swiper-next">
-            <div class="material-icons">arrow_forward</div>
+      </nav>
+      <div class="category">
+        <div class="sub-category">
+          <ul>
+            <li><a href="http://www.google.com">구글(예시)</a></li>
+          </ul>
+          <ul>
+            <li><a href="http://www.naver.com">네이버</a></li>
+          </ul>
+          <ul>
+            <li><a href="http://www.daum.net">다음</a></li>
+          </ul>
+          <ul>
+            <li><a href="http://shopping-demo.elicecoding.com/">쇼핑몰 데모페이지</a></li>
+          </ul>
+          <ul>
+            <li><a href="https://kdt-gitlab.elice.io/sw_track/class_02_seoul/web_project/team8/shopping-mall">8팀 깃랩</a></li>
+          </ul>
         </div>
       </div>
-    </div>
-  </section>
+    </header>
 
-  <footer id="footer">
+    <!-- 이미지 슬라이더 -->
+    <section class="section">
 
-  </footer>
+    </section>
+
   </body>
 </html>
