--- a/src/views/userinfo/userinfo.html
+++ b/src/views/userinfo/userinfo.html
@@ -82,18 +82,26 @@
                             <div class="control">
                                 <input type="text" id="nameInput">
                             </div>
+                            <!-- <div class="failname-message hide">
+                                이름은 2글자 이상이어야 합니다.
+                            </div> -->
                         </div>
                         <div class="field">
                             <label class="label">비밀번호</label>
                             <div class="control">
                                 <input type="password" id="passwordInput">
                             </div>
+                            <!-- <div class="failpass-message hide">
+                                비밀번호는 4글자 이상이어야 합니다.
+                            </div> -->
                         </div>
                         <div class="field">
                             <label class="label">비밀번호 확인</label>
                             <div class="control">
                                 <input type="password" id="passwordConfirmInput">
                             </div>
+                            <!-- <div class="misspass-message hide">비밀번호가 일치하지 않습니다
+                            </div> -->
                         </div>
                         <div class="field">
                             <label class="label">주소</label>
