--- a/src/views/userinfo/userinfo.html
+++ b/src/views/userinfo/userinfo.html
@@ -88,6 +88,7 @@
                         </div>
                         <div class="field">
                             <label class="label">비밀번호</label>
+                            <button id="updatePasswordButton">변경하기</button>
                             <div class="control">
                                 <input type="password" id="passwordInput">
                             </div>
@@ -96,7 +97,7 @@
                             </div> -->
                         </div>
                         <div class="field">
-                            <label class="label">비밀번호 확인</label>
+                            <label class="label" id="passwordConfirmLabel">비밀번호 확인</label>
                             <div class="control">
                                 <input type="password" id="passwordConfirmInput">
                             </div>
@@ -114,7 +115,7 @@
                         <div class="field">
                             <label class="label">전화번호</label>
                             <div class="control">
-                                <input type="text" id="phoneNumberInput">
+                                <input type="text" id="phoneNumberInput" placeholder="010-1234-5678">
                             </div>
                         </div>
                         <div>
