--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -15,23 +15,23 @@ a {
 /* HEADER */
 header {
 	width: 100%;
-	background-color: red;
+	border-bottom: #e5e5e5 solid 1px;
 }
 header .category {
 	display: flex;
 }
 header .category .sub-category {
 	display: flex;
-	padding: 10px;
+	padding-bottom: 10px;
 }
 header .category .sub-category ul {
-	padding: 0 20px;
+	padding-right: 40px;
 }
 header .category .sub-category ul li {
 }
 header .category .sub-category ul li a {
 	display: block;
-	color: #fff;
+	color: #333;
 }
 
 /* PROMOTION */
@@ -42,12 +42,12 @@ header .category .sub-category ul li a {
 	overflow: hidden;
 }
 .promotion-swiper .promotion .swiper-container {
-	width: calc(1000px * 3 + 20px);
+	width: calc(1200px * 3 + 20px);
 	height: 533px;
 	position: absolute;
-	top: 40px;
+	top: 0;
 	left: 50%;
-	margin-left: calc((1000px * 3 + 20px) / -2);
+	margin-left: calc((1200px * 3 + 20px) / -2);
 }
 .promotion-swiper .promotion .swiper-slide {
 	opacity: 0.5;
@@ -55,6 +55,13 @@ header .category .sub-category ul li a {
 }
 .promotion-swiper .promotion .swiper-slide-active {
 	opacity: 1;
+}
+.promotion-swiper .promotion .swiper-slide > img {
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 .promotion-swiper .promotion .swiper-pagination {
 	position: absolute;
@@ -66,7 +73,7 @@ header .category .sub-category ul li a {
 	width: 10px;
 	height: 10px;
 	border-radius: 50%;
-	background-color: #333;
+	background-color: #e5e5e5;
 	margin-right: 6px;
 	opacity: 1;
 }
@@ -80,7 +87,7 @@ header .category .sub-category ul li a {
 .promotion-swiper .promotion .swiper-prev,
 .promotion-swiper .promotion .swiper-next {
 	position: absolute;
-	top: 300px;
+	top: 50%;
 	z-index: 1;
 	cursor: pointer;
 	outline: none;
@@ -94,25 +101,83 @@ header .category .sub-category ul li a {
 }
 .promotion-swiper .promotion .swiper-prev {
 	left: 50%;
-	margin-left: -525px;
+	margin-left: -626px;
 }
 .promotion-swiper .promotion .swiper-next {
 	right: 50%;
-	margin-right: -525px;
+	margin-right: -626px;
 }
 
 /* MAIN-PRODUCT */
 .main-product {
 	height: 1000px;
+	padding: 32px 0 40px;
+}
+.main-product .title h1 {
+	font-size: 28px;
+	line-height: 1.15;
+	letter-spacing: -0.26px;
+	font-weight: 600;
+	text-align: center;
+}
+.main-product .title h2 {
+	font-size: 16px;
+	line-height: 1.45;
+	letter-spacing: -0.2px;
+	font-weight: 500;
+	text-align: center;
+	color: rgb(153, 153, 153);
+	margin-top: 2px;
+}
+.main-product .container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+.main-product .product-item {
+	padding: 0 10px 60px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.main-product .product-item #productImage {
+	height: 270px;
+	width: 270px;
+	border: #333 solid 1px;
+}
+.main-product .product-item .description {
+	display: flex;
+	flex-direction: column;
+	padding: 14px 10px 0 0;
+}
+.main-product .product-item .description .detail #seller {
+	font-size: 12px;
+	margin-bottom: 4px;
+	font-weight: 400;
+}
+.main-product .product-item .description .detail #productDescription {
+	font-size: 16px;
+	margin-bottom: 8px;
+	font-weight: 400;
+}
+.main-product .product-item .description .price {
+	font-size: 16px;
+	font-weight: 800;
+}
+.main-product .button {
+	margin: auto;
+	display: block;
 }
 
+/* FOOTER */
 #to-top {
 	width: 44px;
 	height: 44px;
 	border-radius: 50%;
 	background-color: #fff;
 	color: #333;
-	border: 2px solid rgb(202, 202, 202);
+	border: 2px solid #e5e5e5;
 	cursor: pointer;
 	display: flex;
 	justify-content: center;
