--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -35,6 +35,8 @@
     <!--Swiper-->
     <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="home.css" />
     <script src="home.js" type="module" defer></script>
@@ -79,22 +81,24 @@
         </div>
       </nav>
       <div class="category">
-        <div class="sub-category">
-          <ul>
-            <li><a href="http://www.google.com">구글(예시)</a></li>
-          </ul>
-          <ul>
-            <li><a href="http://www.naver.com">네이버</a></li>
-          </ul>
-          <ul>
-            <li><a href="http://www.daum.net">다음</a></li>
-          </ul>
-          <ul>
-            <li><a href="http://shopping-demo.elicecoding.com/">쇼핑몰 데모페이지</a></li>
-          </ul>
-          <ul>
-            <li><a href="https://kdt-gitlab.elice.io/sw_track/class_02_seoul/web_project/team8/shopping-mall">8팀 깃랩</a></li>
-          </ul>
+        <div class="container mt-3">
+          <div class="sub-category">
+            <ul>
+              <li><a href="http://www.google.com">구글(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="http://www.naver.com">네이버(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="http://www.daum.net">다음(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="http://shopping-demo.elicecoding.com/">쇼핑몰 데모페이지(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="https://kdt-gitlab.elice.io/sw_track/class_02_seoul/web_project/team8/shopping-mall">8팀 깃랩(예시)</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -105,19 +109,19 @@
         <div class="swiper-container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="https://images.unsplash.com/photo-1653450283266-c788c2ca4ab2?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172" alt="예시이미지1">
+              <img src="https://images.unsplash.com/photo-1620799140408-edc6dcb6d633?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1072" alt="예시이미지1">
             </div>
             <div class="swiper-slide">
-              <img src="https://images.unsplash.com/photo-1653427472957-b3b3f313d719?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170" alt="예시이미지2">
+              <img src="https://images.unsplash.com/photo-1586363104862-3a5e2ab60d99?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171" alt="예시이미지2">
             </div>
             <div class="swiper-slide">
-              <img src="https://images.unsplash.com/photo-1653419831613-56ed2a1c8ea8?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074" alt="예시이미지3">
+              <img src="https://images.unsplash.com/photo-1620799139834-6b8f844fbe61?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1072" alt="예시이미지3">
             </div>
             <div class="swiper-slide">
-              <img src="https://images.unsplash.com/photo-1653464064422-6aaaac3f6270?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170" alt="예시이미지4">
+              <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170" alt="예시이미지4">
             </div>
             <div class="swiper-slide">
-              <img src="https://images.unsplash.com/photo-1653372512929-5ac36eb22a73?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074" alt="예시이미지5">
+              <img src="https://images.unsplash.com/photo-1600185365926-3a2ce3cdb9eb?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025" alt="예시이미지5">
             </div>
           </div>
         </div>
@@ -132,11 +136,143 @@
     </section>
 
     <section class="main-product">
-      <div class="title">
-        <h2>TODAY 랭킹</h2>
-      </div>
-      <div class="list">
 
+      <div class="title">
+        <h1>TODAY 랭킹</h1>
+        <h2>이번주 가장 많이 구매했어요</h2>
+      </div>
+      <div class="container">
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller">제조사</div>
+              <div id="productDescription">알록달록 반팔티</div>
+            </div>
+            <div class="price">
+              <div id="productPrice">30,000원</div>
+            </div>
+          </div>
+        </div>
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller"></div>
+              <div id="productDescription"></div>
+            </div>
+            <div class="price">
+              <div id="productPrice"></div>
+            </div>
+          </div>
+        </div>
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller"></div>
+              <div id="productDescription"></div>
+            </div>
+            <div class="price">
+              <div id="productPrice"></div>
+            </div>
+          </div>
+        </div>
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller"></div>
+              <div id="productDescription"></div>
+            </div>
+            <div class="price">
+              <div id="productPrice"></div>
+            </div>
+          </div>
+        </div>
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller"></div>
+              <div id="productDescription"></div>
+            </div>
+            <div class="price">
+              <div id="productPrice"></div>
+            </div>
+          </div>
+        </div>
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller"></div>
+              <div id="productDescription"></div>
+            </div>
+            <div class="price">
+              <div id="productPrice"></div>
+            </div>
+          </div>
+        </div>
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller"></div>
+              <div id="productDescription"></div>
+            </div>
+            <div class="price">
+              <div id="productPrice"></div>
+            </div>
+          </div>
+        </div>
+        <div class="product-item">
+          <div>
+            <figure>
+              <img src="" alt="product-image" id="productImage">
+            </figure>
+          </div>
+          <div class="description">
+            <div class="detail">
+              <div id="seller"></div>
+              <div id="productDescription"></div>
+            </div>
+            <div class="price">
+              <div id="productPrice"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <button class="button is-primary">랭킹 더보기</button>
       </div>
     </section>
 
