--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -76,7 +76,7 @@
             </p>
           </div>
         </div>
-        <table class="cart-table">
+        <table class="cart-table hide">
           <colgroup>
 						<col width="10%">
 						<col width="4%">
@@ -119,13 +119,13 @@
           </tbody>
         </table>
         <div>
-          <p class="null-table">장바구니가 비어있습니다. 제품을 장바구니에 추가해주세요.</p>
+          <p class="hide null">장바구니가 비어있습니다. 제품을 장바구니에 추가해주세요.</p>
         </div>
-        <div class="delete_btn">
+        <div class="delete_btn hide">
           <a href="#" class="delete_all">전체 삭제</a>
           <a href="#" class="delete_choice">선택 삭제</a>
         </div>
-        <div class="order-btn-line">
+        <div class="order-btn-line hide">
           <button class="order-btn">주문하기</button>
         </div>
       </div>
