--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -44,9 +44,10 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <header class="header">
-      <div class="inner">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
+     <!-- 헤더 -->
+     <header class="header">
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="container mt-3">
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
               <img src="/elice-rabbit.png" width="30" height="30" />
@@ -79,60 +80,31 @@
               </ul>
             </div>
           </div>
-        </nav>
-        <div class="category" id="category">
-          <ul class="main-menu">
-            <li class="item">
-              <div class="item__name">아우터</div>
-              <div class="item__contents">
-                <ul class="inner">
-                  <li>전체</li>
-                  <li>재킷</li>
-                  <li>점퍼</li>
-                  <li>블레이저</li>
-                  <li>베스트</li>
-                  <li>가디건</li>
-                  <li>수트</li>
-                  <li>코트</li>
-                </ul>
-              </div>
-            </li>
-            <li class="item">
-              <div class="item__name">상의</div>
-              <div class="item__contents">
-                <ul class="inner">
-                  <li>전체</li>
-                </ul>
-              </div>
-            </li>
-            <li class="item">
-              <div class="item__name">셔츠</div>
-              <div class="item__contents">
-                <ul class="inner">
-                  <li>전체</li>
-                </ul>
-              </div>
-            </li>
-            <li class="item">
-              <div class="item__name">바지</div>
-              <div class="item__contents">
-                <ul class="inner">
-                  <li>전체</li>
-                </ul>
-              </div>
-            </li>
-            <li class="item">
-              <div class="item__name">신발</div>
-              <div class="item__contents">
-                <ul class="inner">
-                  <li>전체</li>
-                </ul>
-              </div>
-            </li>
-          </ul>
+        </div>
+      </nav>
+      <div class="category">
+        <div class="container mt-3">
+          <div class="sub-category">
+            <ul>
+              <li><a href="http://www.google.com">구글(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="http://www.naver.com">네이버(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="http://www.daum.net">다음(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="http://shopping-demo.elicecoding.com/">쇼핑몰 데모페이지(예시)</a></li>
+            </ul>
+            <ul>
+              <li><a href="https://kdt-gitlab.elice.io/sw_track/class_02_seoul/web_project/team8/shopping-mall">8팀 깃랩(예시)</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
+
 
     <!-- 이미지 슬라이더 -->
     <section class="promotion-swiper">
