장바구니 버전 1

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -79,12 +79,13 @@
         <table class="cart-table hide">
           <colgroup>
 						<col width="10%">
-						<col width="4%">
-						<col width="20%">
-						<col width="16%">
 						<col width="5%">
-						<col width="16%">
-						<col width="7%">
+						<col width="20%">
+						<col width="15%">
+						<col width="5%">
+						<col width="15%">
+						<col width="5%">
+            <col width="5%">
 					</colgroup>
           <thead>
 						<tr>
@@ -95,20 +96,22 @@
 							<th scope="col">수량</th>
 							<th scope="col">주문금액</th>
 							<th scope="col">주문관리</th>
+              <th scope="col">상품 id</th>
 						</tr>
 					</thead>
           <tbody>
             <tr class="cart">
-              <td colspan="7" class="cart-col">
+              <td colspan="8" class="cart-col">
                 <table class="cart-table cart-lists">
                   <colgroup>
                     <col width="10%">
-                    <col width="4%">
-                    <col width="20%">
-                    <col width="16%">
                     <col width="5%">
-                    <col width="16%">
-                    <col width="7%">
+                    <col width="20%">
+                    <col width="15%">
+                    <col width="5%">
+                    <col width="15%">
+                    <col width="5%">
+                    <col width="5%">
 									</colgroup>
                   <tbody>
                     <!-- 장바구니에 담긴 상품들의 html 요소(카드 형태)가 주입되는 곳 -->
