--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -22,6 +22,10 @@
       src="https://kit.fontawesome.com/7630448495.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
         integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
@@ -45,62 +49,84 @@
   <body>
     <!-- 헤더 -->
      <!-- 헤더 -->
-     <header class="header">
+     <header>
       <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="container mt-3">
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
               <img src="/elice-rabbit.png" width="30" height="30" />
               <span class="has-text-link">쇼핑-n팀</span>
             </a>
-
-            <a
-              role="button"
-              class="navbar-burger"
-              aria-label="menu"
-              aria-expanded="false"
-              data-target="navbarBasicExample"
-            >
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
           </div>
-
-            <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-              <ul id="navbar">
-                <li>
-                  <a href="/cart" aria-current="page">
-                    <span class="icon">
-                      <i class="fas fa-cart-shopping"></i>
-                    </span>
-                    <span>카트</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
+          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
+            <ul id="navbar">
+              <li>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
-      <div class="category">
-        <div class="container mt-3">
-          <div class="sub-category">
-            <ul>
-              <li><a href="http://www.google.com">구글(예시)</a></li>
+      <div class="category" id="category">
+        <div id="main-category">
+          <ul class="item">
+            <div class="item-name">아우터</div>
+            <div class="item-category">
+              <ul>
+                <li>전체</li>
+                <li>재킷</li>
+                <li>점퍼</li>
+                <li>블레이저</li>
+                <li>베스트</li>
+                <li>가디건</li>
+                <li>수트</li>
+                <li>코드</li>
+              </ul>
+            </div>
+          </ul>
+          <ul class="item">
+            <div class="item-name">상의</div>
+            <div class="item-category">
+              <ul>
+                <li>전체</li>
+              </ul>
+            </div>
+          </ul>
+          <ul class="item">
+            <div class="item-name">셔츠</div>
+            <div class="item-category">
+              <ul>
+                <li>전체</li>
+              </ul>
+            </div>
+          </ul>
+          <ul class="item">
+            <div class="item-name">바지</div>
+            <div class="item-category">
+              <ul>
+                <li>전체</li>
+              </ul>
+            </div>
+          </ul>
+          <ul class="item">
+            <div class="item-name">신발</div>
+            <div class="item-category">
+              <ul>
+                <li>전체</li>
+              </ul>
+            </div>
+          </ul>
+        </div>
+        <div id="sub-category">
+            <ul id="submenu">
+              <li>
+                <a href="/cart" aria-current="page">
+                  <span class="material-icons-outlined">
+                    shopping_cart
+                  </span>
+                </a>
+              </li>
             </ul>
-            <ul>
-              <li><a href="http://www.naver.com">네이버(예시)</a></li>
-            </ul>
-            <ul>
-              <li><a href="http://www.daum.net">다음(예시)</a></li>
-            </ul>
-            <ul>
-              <li><a href="http://shopping-demo.elicecoding.com/">쇼핑몰 데모페이지(예시)</a></li>
-            </ul>
-            <ul>
-              <li><a href="https://kdt-gitlab.elice.io/sw_track/class_02_seoul/web_project/team8/shopping-mall">8팀 깃랩(예시)</a></li>
-            </ul>
-          </div>
+
+          
         </div>
       </div>
     </header>
