--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -1,9 +1,18 @@
+li {
+  list-style: none;
+}
+
+ul {
+  list-style: none;
+}
+
 .div-container {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
 }
+
 .cart-header {
   display: flex;
   align-items: flex-end;
@@ -11,15 +20,19 @@
   padding-bottom: 1rem;
   margin-bottom: 2rem;
 }
+
 .title {
   padding: 16px 0 0 16px;
 }
-.title:not(:last-child){
+
+.title:not(:last-child) {
   margin-bottom: 0px;
 }
+
 .subtitle {
   padding: 48px 16px 0;
 }
+
 .cart-products-header {
   border-bottom: 1px solid #555;
   display: flex;
@@ -28,66 +41,12 @@
   padding-top: 0.75rem;
   width: 100%;
 }
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  text-indent: initial;
-  text-align: center;
-}
-thead{
-  display: table-header-group;
-  vertical-align: middle;
-  border-color: inherit;
-}
-.cart-table {
-  clear: both;
-  min-width: 920px;
-  width: 100%;
-  text-align: center;
-  background: #fff;
-}
-.cart-table tr 
-.cart-table tr:first-child {
-  border-top: 0;
-}
-.cart-table tr 
-.cart-table tr {
-  border-left: 0;
-  border-right: 0;
-}
-.cart-table tr {
-  border: 1px solid #ddd;
-  display: table-row;
-}
-table th {
-  vertical-align: middle;
-  display: table-cell;
-  text-align: -internal-center;
-  width: auto;
-  font-weight: normal;
-  padding: 10px 0;
-}
-.cart-table td {
-  line-height: 16.8px;
-  padding: 10px 0;
-  vertical-align: middle;
-}
-.cart-table .order_btn {
-  color: #4a4a4a;;
-  line-height: 22px;
-  font-weight: normal;
-  padding: 5px  4px;
-  margin: 5px;
-  border: 1px solid #ddd !important;
-}
-.cart-table .cart-col {
-  padding: 0;
-  vertical-align: middle;
-}
+
 .delete_btn {
   margin: 10px 0 20px;
 }
-.delete_btn a{
+
+.delete_btn a {
   color: #4a4a4a;
   display: inline-block;
   width: 90px;
@@ -97,7 +56,8 @@ table th {
   box-sizing: border-box;
   text-align: center;
 }
-.order-btn-line{
+
+.order-btn-line {
 
   padding-top: 30px;
   padding-bottom: 10px;
@@ -107,15 +67,17 @@ table th {
   clear: both;
   position: relative;
 }
-.order-btn-line .order-btn{
+
+.order-btn-line .order-btn {
   min-width: 290px;
   height: 60px;
   line-height: 54px;
   padding-top: 4px;
   font-size: 20px;
 }
+
 .order-btn-line button {
-  
+
   display: inline-block;
   min-width: 100px;
   height: 40px;
@@ -131,16 +93,215 @@ table th {
   vertical-align: middle;
   transition: border 0.2s, background 0.2s ease-in-out;
 }
-.order-btn-line button:hover{
+
+.order-btn-line button:hover {
   border: 1px solid #787777;
   background-color: #787777;
 }
-.hide {
+
+/* .hide {
   display: none;
-}
+} */
 .null-table {
   font-size: 24px;
   display: flex;
   justify-content: center;
   margin: 20px 0;
+}
+
+.cart-products-header {
+  border-bottom: 1px solid #555;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  padding-top: 0.75rem;
+  width: 100%;
+}
+
+.cart-product-box {
+  border-top: 2px solid #000;
+  display: block;
+}
+
+.tit-box {
+  display: flex;
+  align-items: center;
+  height: 56px;
+  border-bottom: 1px solid #e2e3e6;
+  clear: both;
+}
+
+.checkbox-btn {
+  width: 5%;
+  text-align: center;
+}
+
+input[type="checkbox"] {
+  cursor: pointer;
+
+}
+
+.product-info-cell {
+  width: 50%;
+  text-align: center;
+}
+
+.product-option-cell {
+  width: 23%;
+  text-align: center;
+}
+
+.product-price-cell {
+  width: 21%;
+  text-align: center;
+}
+
+.cart-seller-list {
+  list-style: none;
+
+}
+
+.cart-item .btn-quanity-box .input_num {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e2e3e6;
+  border-top: 1px solid #e2e3e6;
+  border-left: none;
+  border-right: none;
+  clear: both;
+}
+
+.cart-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: 1px solid #e2e3e6;
+  clear: both;
+}
+
+.item-info {
+  width: 50%;
+  padding: 22px 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.item-option {
+  width: 23%;
+}
+
+.item-buy {
+  width: 21%;
+}
+
+.product_img {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  margin-right: 30px;
+}
+.product_img img{
+  width: 100px;
+}
+
+.product_info{
+  width: calc(100% - 164px);
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:flex-start;
+}
+
+.product_name{
+  line-height: 22px;
+  height: 44px;
+  color: #000;
+  overflow: hidden;
+  position: relative;
+  font-weight: 500;
+  font-size: 20px;
+  word-break: keep-all;
+  word-wrap: break-word;
+  text-align: left;
+  text-overflow: ellipsis; 
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.product_price{
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.btn-quanity-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-quanity-box .num_minus_btn {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid #e2e3e6;
+}
+
+.btn-quanity-box .num_plus_btn {
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid #e2e3e6;
+}
+
+.btn-quanity-box .input_num {
+  
+  width: 30px;
+  height: 30px;
+  appearance: none;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  border-radius: 0;
+  text-align: center;
+  background-color: #fff;
+  color: #000;
+}
+
+.btn-item-buy-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.item-price {
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+
+.tit-box p{
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 56px;
+  text-align: center;
+  margin: 0;
+}
+.btn-item-buy{
+  width: 92px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 32px;
+  color: #fff;
+  border: 0;
+  background-color: #000;
+  padding: 0;
 }
