--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -70,22 +70,43 @@
           <ul class="item">
             <div class="item-name">아우터</div>
             <div class="item-category">
-              <ul>
+              <ul id="outer">
                 <li>전체</li>
                 <li>재킷</li>
                 <li>점퍼</li>
-                <li>블레이저</li>
-                <li>베스트</li>
-                <li>가디건</li>
-                <li>수트</li>
-                <li>코드</li>
+              </ul>
+              <ul id="top">
+                <li>전체</li>
+              </ul>
+              <ul id="shirts">
+                <li>전체</li>
+              </ul>
+              <ul id="bottom">
+                <li>전체</li>
+              </ul>
+              <ul id="shoes">
+                <li>전체</li>
               </ul>
             </div>
           </ul>
           <ul class="item">
             <div class="item-name">상의</div>
             <div class="item-category">
-              <ul>
+              <ul id="outer">
+                <li>전체</li>
+                <li>재킷</li>
+                <li>점퍼</li>
+              </ul>
+              <ul id="top">
+                <li>전체</li>
+              </ul>
+              <ul id="shirts">
+                <li>전체</li>
+              </ul>
+              <ul id="bottom">
+                <li>전체</li>
+              </ul>
+              <ul id="shoes">
                 <li>전체</li>
               </ul>
             </div>
@@ -93,7 +114,21 @@
           <ul class="item">
             <div class="item-name">셔츠</div>
             <div class="item-category">
-              <ul>
+              <ul id="outer">
+                <li>전체</li>
+                <li>재킷</li>
+                <li>점퍼</li>
+              </ul>
+              <ul id="top">
+                <li>전체</li>
+              </ul>
+              <ul id="shirts">
+                <li>전체</li>
+              </ul>
+              <ul id="bottom">
+                <li>전체</li>
+              </ul>
+              <ul id="shoes">
                 <li>전체</li>
               </ul>
             </div>
@@ -101,7 +136,21 @@
           <ul class="item">
             <div class="item-name">바지</div>
             <div class="item-category">
-              <ul>
+              <ul id="outer">
+                <li>전체</li>
+                <li>재킷</li>
+                <li>점퍼</li>
+              </ul>
+              <ul id="top">
+                <li>전체</li>
+              </ul>
+              <ul id="shirts">
+                <li>전체</li>
+              </ul>
+              <ul id="bottom">
+                <li>전체</li>
+              </ul>
+              <ul id="shoes">
                 <li>전체</li>
               </ul>
             </div>
@@ -109,7 +158,21 @@
           <ul class="item">
             <div class="item-name">신발</div>
             <div class="item-category">
-              <ul>
+              <ul id="outer">
+                <li>전체</li>
+                <li>재킷</li>
+                <li>점퍼</li>
+              </ul>
+              <ul id="top">
+                <li>전체</li>
+              </ul>
+              <ul id="shirts">
+                <li>전체</li>
+              </ul>
+              <ul id="bottom">
+                <li>전체</li>
+              </ul>
+              <ul id="shoes">
                 <li>전체</li>
               </ul>
             </div>
