장바구니 디자인 변경 및 기능 재설정 장바구니 선택, 전체 삭제 기능 구현

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -76,57 +76,15 @@
             </p>
           </div>
         </div>
-        <div  class="cart-product-box">
+        <div  class="cart-product-box hide">
           <div class="tit-box">
             <div class="choice-all-btn checkbox-btn">
-              <input type="checkbox">
+              <input type="checkbox" id="check_all">
             </div>
             <p class="product-info-cell">상품정보</p> 
             <p class="product-option-cell">옵션</p> 
             <p class="product-price-cell">상품금액</p>
           </div> 
-          <ul class="cart-seller-list">
-            <li class="cart-item">
-              <div class="check-btn-box checkbox-btn">
-                <input type="checkbox" id="qwerasdf">
-              </div>
-              <div class="item-info">
-                <div class="product_img">
-                  <img src="https://cdn.pixabay.com/photo/2016/04/01/09/58/bathroom-1299704_960_720.png" alt="제품 사진">
-                </div>
-                <div class="product_info">
-                  <p class="product_name">
-                    미니멀프로젝트 로버스트 헤비 오버핏 반팔티셔츠 MST127 / 8color
-                  </p>
-                  <p class="product_price">
-                    10239100원
-                  </p>
-                </div>
-                
-              </div>
-              <dev class="item-option">
-                <div class="btn-quanity-box">
-                  <div class="num_minus_btn">-</div> 
-                  <label for="quantity">
-                    <input type="text" disabled="disabled" class="input_num">
-                  </label>
-                  <div class="num_plus_btn">+</div>
-                </div>
-              </dev>
-              <div class="item-buy">
-                <div class="btn-item-buy-box">
-                  <div class="item-price-box">
-                    <div class="item-price">
-                        19,000원
-                    </div> 
-                  </div> 
-                  <button type="button" class="btn-item-buy">
-                    주문하기
-                  </button>
-                </div>
-              </div>
-            </li>
-          </ul>
         </div>
         <div>
           <p class="hide null">장바구니가 비어있습니다. 제품을 장바구니에 추가해주세요.</p>
