--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -99,9 +99,9 @@ ul {
   background-color: #787777;
 }
 
-/* .hide {
+.hide {
   display: none;
-} */
+}
 .null-table {
   font-size: 24px;
   display: flex;
@@ -120,7 +120,6 @@ ul {
 
 .cart-product-box {
   border-top: 2px solid #000;
-  display: block;
 }
 
 .tit-box {
@@ -185,13 +184,26 @@ input[type="checkbox"] {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  border-left: 1px solid #e2e3e6;
 }
 
-.item-option {
+.item-option-wrap{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 23%;
+  height: 144px;
+  border-left: 1px solid #e2e3e6;
+  background: #fff;
+  padding: 0;
+  margin-bottom: 0;
 }
-
-.item-buy {
+.item-buy-wrap{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 144px;
+  border-left: 1px solid #e2e3e6;
   width: 21%;
 }
 
@@ -199,6 +211,7 @@ input[type="checkbox"] {
   width: 100px;
   height: 100px;
   overflow: hidden;
+  margin-left: 10px;
   margin-right: 30px;
 }
 .product_img img{
