--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -4,6 +4,7 @@
 	position: relative;
 	transition: height 0.4s;
 	overflow: hidden;
+	margin-top: 107px;
 }
 .promotion-swiper .promotion .swiper-container {
 	width: calc(1200px * 3 + 20px);
