--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -93,6 +93,8 @@
           <a href="#" class="delete_all">전체 삭제</a>
           <a href="#" class="delete_choice">선택 삭제</a>
         </div>
+        <div class="payment-price-info hide">
+        </div>
         <div class="order-btn-line hide">
           <button class="order-btn">주문하기</button>
         </div>
